--- a/index.qmd
+++ b/index.qmd
@@ -31,22 +31,19 @@ was not collected. There are three main types of missing data.
 
 1\. **Missing Completely at Random (MCAR)**: Data missingness is
 unrelated to observed and unobserved variables. In other words, the
-probability of data being missing is the same for all observations.\
-![](images/clipboard-1787501804.png){width="610"}
+probability of data being missing is the same for all observations.
+
+![](Screenshot 2024-03-16 165449.png)
 
 2\. **Missing at Random (MAR)**: The missingness is related to observed
 variables but not to the values of the missing data itself. In this
 case, the probability of data being missing can be predicted by other
 variables in the dataset.
 
-![](images/clipboard-3718230433.png){width="617"}
-
 3\. **Missing Not at Random (MNAR)**: The missingness is related to the
 values of the missing data itself, even after considering observed
 variables. This type of missing data can introduce bias and is often
 more challenging to handle.
-
-![](images/clipboard-2822021530.png){width="609"}
 
 Handling missing data is crucial in statistical analysis because it can
 lead to biased or inefficient results if not addressed properly.
