--- a/index.qmd
+++ b/index.qmd
@@ -33,21 +33,17 @@ was not collected. There are three main types of missing data.
 unrelated to observed and unobserved variables. In other words, the
 probability of data being missing is the same for all observations.
 
-![](Screenshot 2024-03-16 165449.png)
+![](Screenshot%202024-03-16%20165449.png)
 
 2\. **Missing at Random (MAR)**: The missingness is related to observed
 variables but not to the values of the missing data itself. In this
 case, the probability of data being missing can be predicted by other
-variables in the dataset.
-
-![](Screenshot 1.png)
+variables in the dataset.![](Screenshot 1.png)
 
 3\. **Missing Not at Random (MNAR)**: The missingness is related to the
 values of the missing data itself, even after considering observed
 variables. This type of missing data can introduce bias and is often
-more challenging to handle.
-
-![](Screenshot 2.png)
+more challenging to handle.![](Screenshot 2.png)
 
 Handling missing data is crucial in statistical analysis because it can
 lead to biased or inefficient results if not addressed properly.
