--- a/index.qmd
+++ b/index.qmd
@@ -33,19 +33,43 @@ was not collected. There are three main types of missing data.
 unrelated to observed and unobserved variables. In other words, the
 probability of data being missing is the same for all observations.
 
-![](Screenshot%202024-03-16%20165449.png)
+![](Screenshot%202024-03-16%20165449.png){width="627"}
 
 2\. **Missing at Random (MAR)**: The missingness is related to observed
 variables but not to the values of the missing data itself. In this
 case, the probability of data being missing can be predicted by other
 variables in the dataset.
 
-![](Screenshot 1.png)
+![](Screenshot 1.png){width="623"}
 
 3\. **Missing Not at Random (MNAR)**: The missingness is related to the
 values of the missing data itself, even after considering observed
 variables. This type of missing data can introduce bias and is often
-more challenging to handle. ![](Screenshot 2.png)
+more challenging to handle.
+
+Ex. You ask the student’s name and how many books they have overdue.
+
+Students with 0 overdue books: 90% respond
+
+Students with 2 overdue books: 80% respond
+
+If a student truly has more overdue books they are less likely to
+respond
+
+-   More overdue books, the less likely a student responds, higher rate
+    of missing value
+
+```{=html}
+<!-- -->
+```
+-   Missing of the certain value depends on the TRUE value itself
+
+```{=html}
+<!-- -->
+```
+-   Are the missing values based on the actual value of the value
+
+![](Screenshot 2.png){width="566"}
 
 Handling missing data is crucial in statistical analysis because it can
 lead to biased or inefficient results if not addressed properly.
